# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# See https://bugs.chromium.org/p/webrtc/issues/detail?id=5453.
# Some WebRTC targets require the 10.7 deployment version of the Mac SDK
# and a 10.11 min SDK, but those targets are only used in non-Chromium
# builds.
mac_sdk_min_build_override = "10.10"
