# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# See https://bugs.chromium.org/p/webrtc/issues/detail?id=5453.
# These overrides are needed and should generally track Chromium settings.
mac_deployment_target_build_override = "10.7"
mac_sdk_min_build_override = "10.10"
