# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Exclude support for registering main function in multi-process tests.
gtest_include_multiprocess = false

# Exclude support for platform-specific operations across unit tests.
gtest_include_platform_test = false
