# Copyright 2018 The PDFium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../pdfium.gni")

source_set("constants") {
  sources = [
    "access_permissions.h",
    "annotation_common.cpp",
    "annotation_common.h",
    "annotation_flags.h",
    "appearance.cpp",
    "appearance.h",
    "ascii.h",
    "form_fields.cpp",
    "form_fields.h",
    "form_flags.h",
    "page_object.cpp",
    "page_object.h",
    "stream_dict_common.cpp",
    "stream_dict_common.h",
    "transparency.cpp",
    "transparency.h",
  ]
  configs += [
    "../:pdfium_strict_config",
    "../:pdfium_noshorten_config",
  ]
}
